--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,9 @@
 <div>
-  <h1 class="font-bold text-4xl">Books#index</h1>
-  <p>Find me in app/views/books/index.html.erb</p>
+  <h1 class="font-bold text-4xl">Books in our Catalogue</h1>
+  <div id="books">
+    <% @books.each do |book| %>
+      <div>
+        <%= link_to book.title, book%>
+      </div>
+    <%end%>
 </div>
