--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,9 +22,38 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
-    <main class="container mx-auto mt-28 px-5 flex">
-      <%= yield %>
-    </main>
+ <body class="h-full bg-gray-900">
+    <div class="min-h-full">
+      <nav class="bg-gray-800 shadow-sm">
+        <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+          <div class="flex h-16 justify-between">
+            <div class="flex">
+              <div class="hidden sm:-my-px sm:ml-6 sm:flex sm:space-x-8">
+                <%= link_to "Library books", books_path, class: "inline-flex items-center border-b-2 border-indigo-400 px-1 pt-1 text-sm font-medium text-gray-100" %>
+              </div>
+              <div class="hidden sm:-my-px sm:ml-6 sm:flex sm:space-x-8">
+                <%= link_to "Borrowed books", borrowings_path, class: "inline-flex items-center border-b-2 border-indigo-400 px-1 pt-1 text-sm font-medium text-gray-100" %>
+              </div>
+            </div>
+            <div class="hidden sm:-my-px sm:ml-6 sm:flex sm:space-x-8">
+              <% if Current.user %>
+                <%= button_to "Logout", session_path, method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-gray-700 text-gray-100 font-medium hover:bg-gray-600" %>
+              <% else %>
+                <%= button_to "Login", new_session_path, class: "mt-2 rounded-lg py-3 px-5 bg-gray-700 text-gray-100 font-medium hover:bg-gray-600" %>
+              <% end %>
+            </div>
+          </div>
+        </div>
+      </nav>
+
+      <div class="py-10">
+        <main>
+          <div class="mx-auto max-w-7xl">
+            <%= yield %>
+          </div>
+        </main>
+      </div>
+    </div>
   </body>
+</html>
 </html>
