--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,9 +1,26 @@
 <div>
-  <h1 class="font-bold text-4xl">Books in our Catalogue</h1>
+  <h1 class="font-bold text-4xl text-m font-medium text-gray-100">Books in our Catalogue</h1>
+  <br>
   <div id="books">
     <% @books.each do |book| %>
-      <div>
-        <%= link_to book.title, book%>
+      <div class="flex item-center justify-between">
+        <!-- Book Title -->
+        <div class= "text-sm font-medium text-gray-100">
+          <%= link_to book.title, book %>
+        </div>
+
+        <!-- Borrow Button -->
+        <div>
+          <% if book.status == "available" %>
+            <%= button_to 'Borrow Book', borrow_path(book), method: :put, class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 border border-blue-700 rounded" %>
+          <% else %>
+            <button class="bg-blue-500 text-white font-bold py-2 px-4 rounded opacity-50 cursor-not-allowed">
+              Borrow
+            </button>
+          <% end %>
+        </div>
       </div>
+      <br>
+
     <%end%>
 </div>
