--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,20 +1,23 @@
 <div>
-  <h1 class="font-bold text-4xl"><%= @book.title %></h1>
+  <h1 class="font-bold text-4xl text-m font-medium text-gray-100"><%= @book.title %></h1>
+  <br>
 
-  <div>
+  <div class="text-sm font-medium text-gray-100">
     <p>Author: <%= @book.author%></p>
   </div>
 
-  <div>
+  <div class="text-sm font-medium text-gray-100">
     <p>ISBN: <%= @book.isbn%></p>
   </div>
 
 
-  <div>
+  <div class="text-sm font-medium text-gray-100">
     <p>Availability: <%= @book.status%></p>
   </div>
 
-  <%= link_to "Back to book listings", books_path %>
+  <br>
+
+  <%= button_to "Back to Library", books_path, method: :get, class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 border border-blue-700 rounded"  %>
 
 
 </div>
