--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <h1 class="font-bold text-4xl text-m font-medium text-gray-100">Books in our Catalogue</h1>
+  <h1 class="font-bold text-4xl text-mgit text-gray-100">Books in our Catalogue</h1>
   <br>
   <div id="books">
     <% @books.each do |book| %>
