--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <h1 class="font-bold text-4xl text-m font-medium text-gray-100"><%= @book.title %></h1>
+  <h1 class="font-bold text-4xl text-m text-gray-100"><%= @book.title %></h1>
   <br>
 
   <div class="text-sm font-medium text-gray-100">
